usermanagement/kubernetes/usermanagement-backend/deplyoment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermanagement-backend
  labels:
    app: usermanagement-backend
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: usermanagement-backend
        tier: backend
    template:
      metadata:
        labels:
          app: usermanagement-backend
          tier: backend
      spec:
        containers:
          - name: usermanagement-backend
            image: dak4408/usermanagement-backend:latest
            ports:
              - name: http-usermangement-backend
                containerPort: 8084
