usermanagement/kubernetes/usermanagement-backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: usermanagement-app-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api/(/|$)(.*)
            backend:
              service:
                name: usermanagement-app-service
                port:
                  number: 8082
